# ai-agent-playground

./: .env.example  .gitignore  README.md  pyproject.toml
agent-development-ket/examples/multi_tool_agent/: agent.py
agent-development-ket/examples/my_agent/: agent.py
langchain/examples/: masking_message_example.ipynb  synthetic_data_generation.ipynb
langgraph/examples/: deep_socketio_streaming_ollama.ipynb  deep_streaming_server.py  health_chatbot_multi_agent_ollama.ipynb  health_chatbot_multi_agent_openai.ipynb  hierarchical_agent_teams_by_ollama.ipynb  hierarchical_chatbot_with_memory.ipynb  react_local_ollama.ipynb  react_openai_gpt4o.ipynb  state_management_tutorial.ipynb  streaming_ollama.ipynb  structured_output_ollama.ipynb
